fixed the table. It told me to have two links, but when updated the test failed, so I changed it back to three and all the tests passed..

--- a/index.html
+++ b/index.html
@@ -42,43 +42,28 @@
     <h2 id="contacts">Contact Me</h2>
     <table class="contacts-table">
       <tr>
-        <th>Discord
-          </th>
-          <th>
-          Daniel Sizemore
-        </th>
+        <th>Discord</th>
+        <td>Daniel Sizemore</td>
       </tr>
       <tr>
-        <th>
-          Linkedin
-          </th>
-          <th>
+        <th>Linkedin</th>
+        <td>
           <a
             target="_blank"
             href="https://www.linkedin.com/in/daniel-sizemore--dev/"
             >Daniel Sizemore</a
           >
-        </th>
+        </td>
       </tr>
       <tr>
-        <th>
-          Email
-          </th>
-          <th>
-          <a target="_blank" href="mailto:dsizemore1098@gmail.com"
-            >Daniel Sizemore</a
-          >
-        </th>
+        <th>Email</th>
+        <td>
+          <a target="_blank" href="mailto:">dsizemore1098@gmail.com</a>
+        </td>
       </tr>
       <tr>
-        <th>
-          Github
-          </th>
-          <th>
-          <a target="_blank" href="https://github.com/dsizemore98"
-            >Daniel Sizemore</a
-          >
-        </th>
+        <th>Github</th>
+        <td><a href="https://github.com/">Daniel Sizemore</a></td>
       </tr>
     </table>
   </body>
